# proof-chain

./: .gitignore  Dockerfile  ProofChain_Error_Log.md  proof-chain.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/ProofChain/: App.hs  Clients.hs  Services.hs  Types.hs
test/: Spec.hs
