cabal-version:      3.0
name:               proof-chain
version:            0.1.0.0
synopsis:           AI-powered logical reasoning validation service
description:        ProofChain is a REST API that validates proof chains, checks for
                    logical fallacies, evaluates argument strength, and generates
                    logical analyses using a mock Claude AI client.
license:            MIT
license-file:       LICENSE
author:             Malbin Jose
maintainer:         malbin@example.com
category:           Web, AI, Logic
build-type:         Simple

common shared-deps
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-orphans
    build-depends:
        base         >= 4.17 && < 5,
        aeson        >= 2.1,
        text         >= 2.0,
        containers   >= 0.6,
        mtl          >= 2.2,
        bytestring   >= 0.11,
        time         >= 1.12,
        http-types   >= 0.12

library
    import:           shared-deps
    exposed-modules:
        ProofChain.Types
        ProofChain.Services
        ProofChain.Clients
        ProofChain.App
    hs-source-dirs:   src
    build-depends:
        warp         >= 3.3,
        wai          >= 3.2

executable proof-chain
    import:           shared-deps
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        proof-chain,
        warp         >= 3.3

test-suite proof-chain-test
    import:           shared-deps
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        proof-chain,
        hspec        >= 2.10,
        hspec-wai    >= 0.11,
        wai          >= 3.2,
        wai-extra    >= 3.1
